--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.url= jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
 spring.datasource.username=rm98768
-spring.datasource.password=sous@24
+spring.datasource.password=220405
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
